Fixed a small layout issue in index.html
Fixed the centering issue I was having on certain pixel sizes. Changed out "margin: 0 auto;" for "text-align: center;" which seems to be working better.

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -321,7 +321,7 @@ img{
     font-weight: 400;
     color: white;
     padding: 10px 0px 0px 0px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 .box2 .btn{
@@ -348,7 +348,7 @@ img{
     font-weight: 400;
     color: white;
     padding: 10px 0px 0px 0px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 .box3 .btn{
